--- a/index.html
+++ b/index.html
@@ -131,19 +131,19 @@
           class="contact__form">
           <!-- <form action="includes/mail/send.php" method="POST" id="mail-form" class="contact__form"> -->
           <label for="firstname">First Name</label>
-          <input ref="fname" type="text" id="firstname" name="firstname" required="required" value="meharpreet-singh">
+          <input ref="fname" type="text" id="firstname" name="firstname" required="required" value="">
 
           <label for="lastname">Last Name</label>
-          <input ref="lname" type="text" id="lastname" name="lastname" required value="sidhu">
+          <input ref="lname" type="text" id="lastname" name="lastname" required value="">
 
           <label for="email">Email</label>
-          <input ref="email" type="email" id="email" name="email" required value="meharsidhubti@gmail.com">
+          <input ref="email" type="email" id="email" name="email" required value="">
 
           <label for="message">Your Message</label>
           <textarea ref="message" name="message" id="message" cols="30" rows="10">Message Here</textarea>
 
           <label for="phone">Your Phone # <i>(optional)</i></label>
-          <input ref="phone" type="tel" value="tel" name="phone" value="8360350054">
+          <input ref="phone" type="tel" value="tel" name="phone" value="">
           <br>
           <div class="mailStatus hidden">💖Wait for mail status💖</div>
 
